...
    android:padding="16dp">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cardListRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn_add_card"
        android:layout_marginBottom="47dp" />

    <Button
        android:id="@+id/btn_add_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:backgroundTint="@color/deep_blue"
        android:text="Add Card"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/btn_return_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
